add homepage layout and css

--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
     <title>Odin Recepies</title>
 </head>
 <body>
-
+    <div class="split left"></div>
+    <div class="split right"></div>
+    <div class="container">
+        <div class="container-recepie">
+            <div class="container-text">
+                <h1>Recepies List</h1>
+                <ul>
+                    <li><a href="">recepie link</a></li>
+                    <li><a href="">recepie link</a></li>
+                    <li><a href="">recepie link</a></li>
+                    <li><a href="">recepie link</a></li>
+                    <li><a href="">recepie link</a></li>
+                </ul>  
+            </div>
+        </div>
+    </div>
 </body>
 </html>
