add some font style changes

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         <div class="container-recepie">
             <div class="container-text">
                 <h1>Recepies List</h1>
-                <ul>
-                    <li><a href="">recepie link</a></li>
-                    <li><a href="">recepie link</a></li>
-                    <li><a href="">recepie link</a></li>
-                    <li><a href="">recepie link</a></li>
-                    <li><a href="">recepie link</a></li>
+                <ul class="container-list list">
+                    <li class="list-item"><a href="">recepie link</a></li>
+                    <li class="list-item"><a href="">recepie link</a></li>
+                    <li class="list-item"><a href="">recepie link</a></li>
+                    <li class="list-item"><a href="">recepie link</a></li>
+                    <li class="list-item"><a href="">recepie link</a></li>
                 </ul>  
             </div>
         </div>
