--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <div class="container">
         <div class="container-recepie">
             <div class="container-text">
-                <h1>Recepies List</h1>
+                <h1>Odin Recipes</h1>
                 <ul class="container-list list">
-                    <li class="list-item"><a href="">recepie link</a></li>
+                    <li class="list-item"><a href="src/pages/recepie-1.html">Pancakes</a></li>
                     <li class="list-item"><a href="">recepie link</a></li>
                     <li class="list-item"><a href="">recepie link</a></li>
                     <li class="list-item"><a href="">recepie link</a></li>
