add changec to recepie page

--- a/src/pages/recepie-1.html
+++ b/src/pages/recepie-1.html
@@ -18,7 +18,23 @@
                 <div class="recepie-text">
                     <h1>Pancakes Recipe</h1>
                 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error nobis perspiciatis obcaecati laborum nemo. Quis eius aspernatur quaerat ex non repellendus odit, cum distinctio perferendis quisquam facilis fuga vel quasi!</p>
+                <p>A pancake (or hotcake, griddlecake, or flapjack) is a flat cake, often thin and round, prepared from a starch-based batter that may contain eggs, milk and butter, and then cooked on a hot surface such as a griddle or frying pan. It is a type of batter bread. Archaeological evidence suggests that pancakes were probably eaten in prehistoric societies.</p>
+
+                <h3>Ingredients</h3>
+                <ul>
+                    <li>Pancake mix</li>
+                    <li>Water</li>
+                </ul>
+
+                <h3>Cooking steps</h3>
+                <ol>
+                    <li>Measure the mixture according to the instructions on the package</li>
+                    <li>Measure water according to the instructions on the package</li>
+                    <li>Mix water and mixture</li>
+                    <li>Fry in a hot frying pan until golden brown on both sides</li>
+                    <li>Add butter and syrup to prepared pancakes</li>
+                    <li>Pancakes are ready to eat</li>
+                </ol>
                 </div>
 
                 <a class="homepage-link" href="../../index.html">Get back to all recepies list</a>
