add more recipies pages and changes to the index.html

--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
                 <h1>Odin Recipes</h1>
                 <ul class="container-list list">
                     <li class="list-item"><a href="src/pages/recepie-1.html">Pancakes</a></li>
-                    <li class="list-item"><a href="">recepie link</a></li>
-                    <li class="list-item"><a href="">recepie link</a></li>
-                    <li class="list-item"><a href="">recepie link</a></li>
-                    <li class="list-item"><a href="">recepie link</a></li>
+                    <li class="list-item"><a href="src/pages/recepie-2.html">Hot-Dog</a></li>
+                    <li class="list-item"><a href="src/pages/recepie-3.html">Breakfast oats</a></li>
                 </ul>  
             </div>
         </div>
