--- a/src/pages/recepie-1.html
+++ b/src/pages/recepie-1.html
@@ -28,12 +28,12 @@
 
                 <h3>Cooking steps</h3>
                 <ol>
-                    <li>Measure the mixture according to the instructions on the package</li>
-                    <li>Measure water according to the instructions on the package</li>
-                    <li>Mix water and mixture</li>
-                    <li>Fry in a hot frying pan until golden brown on both sides</li>
-                    <li>Add butter and syrup to prepared pancakes</li>
-                    <li>Pancakes are ready to eat</li>
+                    <li><strong>Measure the mixture:</strong> Follow the instructions on the package to measure the pancake mix.</li>
+                    <li><strong>Measure water: </strong>Use the guidelines provided on the package to measure the appropriate amount of water needed for the pancake mix.</li>
+                    <li><strong>Mix water and mixture:</strong> In a mixing bowl, combine the measured pancake mix with the measured water. Stir until the mixture is smooth and well-combined.</li>
+                    <li><strong>Fry the pancakes:</strong> Heat a frying pan over medium heat until hot. Pour a ladleful of the pancake batter onto the hot pan. Cook the pancakes for a few minutes on each side until they are golden brown.</li>
+                    <li><strong>Add butter and syrup:</strong> Once the pancakes are cooked, transfer them to a plate. Add a pat of butter on top of each pancake and drizzle with your favorite syrup.</li>
+                    <li><strong>Serve and enjoy:</strong> Your pancakes are now ready to be enjoyed! Serve them warm and fluffy for a delicious breakfast or snack.</li>
                 </ol>
                 </div>
 
